infra/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default
  namespace: eventflow
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-to-kafka
  namespace: eventflow
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: eventflow-kafka
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - { key: app, operator: In, values: [order-service, payment-service, inventory-service, notification-service] }
      ports:
        - { protocol: TCP, port: 9092 }
        - { protocol: TCP, port: 9093 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-app
  namespace: eventflow
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [order-service, payment-service, inventory-service, notification-service] }
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector: {}
    - to:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: kube-system } }
      ports:
        - { protocol: UDP, port: 53 }
